tests/should-fail/crashes/shouldnt-crash-29.j
function a takes nothing returns Ynteger
	if true then
		return 0
	elseif false then
	else
	local a arrayndif
endfunction
